dark mode fixes

--- a/packages/eez-studio-ui/_stylesheets/app.less
+++ b/packages/eez-studio-ui/_stylesheets/app.less
@@ -476,8 +476,10 @@ input::placeholder {
 }
 
 button.EezStudio_Action {
-    &:active {
-        transform: translate(1px, 1px);
+    &:not(:disabled) {
+        &:active {
+            transform: translate(1px, 1px);
+        }
     }
 
     &:not(.btn-outline-success, .btn-outline-danger) {
